description link color.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -140,6 +140,9 @@
     margin-top: 10px;
   }
 }
+.advert-text-content a, .advert-desc a {
+  color: @bootstrap-blue;
+}
 
 .advert-action {
   background: #f2f2f2;
