--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
@@ -21,7 +21,7 @@
   // margin-top: -2px;
   overflow: hidden;
   z-index: @zindex-navbar-fixed;
-  .transition(width ease .5s);
+  .transition(width .5s);
   background-color: #fff;
 
   @media (min-width: 600px) {
@@ -113,7 +113,7 @@
   margin: 15px 0 30px 0;
   width: 100%;
   min-width: 320px;
-  .transition(margin-left ease .5s);
+  .transition(margin-left .5s);
 
   @media (min-width: 600px) {
     margin-left: @site-menu-width;
