--- a/src/Adstacy/AppBundle/Resources/views/App/tags.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/tags.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}All Tags| Adstacy{% endblock %}
 
+{% block site_body_class %}{% endblock %}
+
 {% block stylesheets %}
   {{ parent() }}
   {% stylesheets filter='cssrewrite, uglifycss'
@@ -12,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="adstacy-container">
+  <div class="adstacy-container site-body-bg">
     <ul class="jscroll tags clearfix">
       {{ block('ajax_content') }}
     </ul>
