--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -36,24 +36,27 @@
           <div id="landing-screenshot">
             <img src="{{ asset('bundles/adstacyapp/img/screenshot.png') }}" alt="Adstacy" />
           </div>
-          <div id="register-form" class="panel panel-default">
-            <div class="panel-heading">
-              {% for owner in hwi_oauth_resource_owners() %}
-                <a class="btn btn-{{ owner }} btn-block btn-social" href="{{ hwi_oauth_login_url(owner) }}"><i class="icon icon-{{ owner }}"></i>{{"login.with"|trans}} {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
-              {% endfor %}
+          <div id="register-form">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                {% for owner in hwi_oauth_resource_owners() %}
+                  <a class="btn btn-{{ owner }} btn-block btn-social" href="{{ hwi_oauth_login_url(owner) }}"><i class="icon icon-{{ owner }}"></i>{{"login.with"|trans}} {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
+                {% endfor %}
+              </div>
+              <form action="{{ path('fos_user_registration_register') }}" class="panel-body" method="post">
+                {{ form_errors(form) }}
+
+                {{ form_row(form.email) }}
+                {{ form_row(form.username) }}
+                {{ form_row(form.realName) }}
+                {{ form_row(form.plainPassword) }}
+                <p class="h6">{{ "form_registration.agreement"|trans({'%terms_url%': path('adstacy_app_page_show', {key: 'terms'}),
+                  '%privacy_url%': path('adstacy_app_page_show', {key: 'privacy-policy'}) })|raw }}</p>
+                {{ form_widget(form.register, {attr: {class: 'btn btn-primary btn-block'} }) }}
+
+              {{ form_end(form) }}
+              </form>
             </div>
-            <form action="{{ path('fos_user_registration_register') }}" class="panel-body" method="post" >
-              {{ form_errors(form) }}
-
-              {{ form_row(form.email) }}
-              {{ form_row(form.username) }}
-              {{ form_row(form.realName) }}
-              {{ form_row(form.plainPassword) }}
-              <p class="h6">{{ "form_registration.agreement"|trans({'%terms_url%': path('adstacy_app_page_show', {key: 'terms'}),
-                '%privacy_url%': path('adstacy_app_page_show', {key: 'privacy-policy'}) })|raw }}</p>
-              {{ form_widget(form.register, {attr: {class: 'btn btn-primary btn-block'} }) }}
-
-            {{ form_end(form) }}
           </div>
         </div>
       </div>
