remove favorite tag width.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
@@ -149,17 +149,13 @@
 }
 
 #favourites {
-  a {
-    width: 170px;
-    float: left;
-  }
   button {
     float: right;
     margin-right: 10px;
     border: 0;
     background: none;
     &:hover {
-      color: #b00;
+      color: @brand-primary;
     }
   }
 }
