--- a/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
@@ -1,25 +1,25 @@
 {% extends 'AdstacyAppBundle:Search:search.html.twig' %}
 
 {% block search_content %}
-  {% if paginator.getCurrentPageResults|length > 0 and app.request.query.get('q') != '' %}
+  {% if users|length > 0 and app.request.query.get('q') != '' %}
     <div class="jscroll">
       {{ block('ajax_content') }}
     </div>
   {% else %}
     <div class="text-center">
       <h1>{{"search.no_result.message"|trans}}</h1>
-      <p class="lead">{{"search.no_result.help"|trans}}</p>
+      <p class="lead">{{"search.no_result.user_help"|trans}}</p>
     </div>
   {% endif %}
 {% endblock %}
 
 {% block ajax_content %}
   <div class="users">
-    {% for user in paginator.getCurrentPageResults %}
+    {% for user in users %}
       {% include 'AdstacyAppBundle:User:user.html.twig' with {user: user} %}
     {% endfor %}
   </div>
-  {% if paginator.hasNextPage %}
+  {% if users|length >= max_users_per_page %}
     {% set params = app.request.query.all|merge({page: paginator.getNextPage}) %}
     <a href="{{ path('adstacy_app_search', params )}}" class="btn btn-default btn-lg btn-block load-next next-page">More</a>
   {% endif %}
