--- a/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
@@ -29,7 +29,7 @@
     {% for user in users %}
       {% include 'AdstacyAppBundle:User:user.html.twig' with {user: user} %}
     {% endfor %}
-    {% if users|length >= max_who_to_follow %}
+    {% if source == 'adstacy' and  users|length >= max_who_to_follow %}
       {% set params = app.request.query.all|merge({page: (app.request.query.get('page') ?: 1) + 1}) %}
       <a href="{{ path('adstacy_app_who_to_follow', params) }}" class="btn btn-default btn-lg btn-block load-next next-page">{{ "more"|trans }}</a>
     {% endif %}
