--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -23,48 +23,50 @@
   </div>
 {% endblock %}
 
-{% block body %}
-  <div id="landing">
-    <div id="landing-title" class="jumbotron">
-      <div class="wrapper">
-        <div id="landing-heading">
+{% block container %}
+  <div id="landing" class="site-container site-wrapper">
+    <div class="site-body">
+      <div class="landing-title">
           <h1>{{ "landing.welcome"|trans }}</h1>
           <h2>{{ "landing.desc"|trans }}</h2>
-          <a href="{{ path('adstacy_app_explore') }}" title="explore" class="btn btn-success btn-lg">{{ "landing.explore"|trans }}</a>
+          <a href="{{ path('adstacy_app_explore') }}" title="explore" class="label-group btn btn-primary btn-lg">
+            <i class="icon icon-globe"></i><span class="text">{{ "landing.explore"|trans }}</span>
+          </a>
+      </div>
+
+      <div class="clearfix">
+        <div class="landing-screenshot">
+          <img src="{{ asset('bundles/adstacyapp/img/screenshot.png') }}" alt="Adstacy" width="660" height="468">
         </div>
-        <div class="clearfix">
-          <div id="landing-screenshot">
-            <img src="{{ asset('bundles/adstacyapp/img/screenshot.png') }}" alt="Adstacy" />
+        <div id="register-form" class="panel panel-default">
+          <div class="panel-heading">
+            {% for owner in hwi_oauth_resource_owners() %}
+              <a class="btn btn-{{ owner }} btn-block btn-social" href="{{ hwi_oauth_login_url(owner) }}">
+                <i class="icon icon-{{ owner }}"></i>{{"login.with"|trans}} {{ owner|trans({}, 'HWIOAuthBundle') }}
+              </a>
+            {% endfor %}
           </div>
-          <div id="register-form">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                {% for owner in hwi_oauth_resource_owners() %}
-                  <a class="btn btn-{{ owner }} btn-block btn-social" href="{{ hwi_oauth_login_url(owner) }}"><i class="icon icon-{{ owner }}"></i>{{"login.with"|trans}} {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
-                {% endfor %}
-              </div>
-              <form action="{{ path('fos_user_registration_register') }}" class="panel-body" method="post">
-                {{ form_errors(form) }}
+          <form action="{{ path('fos_user_registration_register') }}" class="panel-body" method="post">
+            {{ form_errors(form) }}
 
-                {{ form_row(form.email) }}
-                {{ form_row(form.username) }}
-                {{ form_row(form.realName) }}
-                {{ form_row(form.plainPassword) }}
-                <p class="h6">{{ "form_registration.agreement"|trans({'%terms_url%': path('adstacy_app_page_show', {key: 'terms'}),
-                  '%privacy_url%': path('adstacy_app_page_show', {key: 'privacy-policy'}) })|raw }}</p>
-                {{ form_widget(form.register, {attr: {class: 'btn btn-primary btn-block'} }) }}
+            {{ form_row(form.email) }}
+            {{ form_row(form.username) }}
+            {{ form_row(form.realName) }}
+            {{ form_row(form.plainPassword) }}
+            <p>{{ "form_registration.agreement"|trans({'%terms_url%': path('adstacy_app_page_show', {key: 'terms'}),
+              '%privacy_url%': path('adstacy_app_page_show', {key: 'privacy-policy'}) })|raw }}</p>
+            {{ form_widget(form.register, {attr: {class: 'btn btn-primary pull-right'} }) }}
 
-              {{ form_end(form) }}
-              </form>
-            </div>
-          </div>
+            {{ form_end(form) }}
+          </form>
         </div>
       </div>
-      <div id="landing-social" class="wrapper">
-        <a href="https://www.facebook.com/adstacycom" class="btn btn-facebook btn-lg btn-social">
+
+      <div class="landing-social">
+        <a href="https://www.facebook.com/adstacycom" class="btn btn-facebook btn-social" title="adstacy on facebook">
           <i class="icon icon-facebook"></i>Like us on Facebook
         </a>
-        <a href="https://www.twitter.com/adstacycom" class="btn btn-twitter btn-lg btn-social">
+        <a href="https://www.twitter.com/adstacycom" class="btn btn-twitter btn-social" title="adstacy on twitter">
           <i class="icon icon-twitter"></i>Follow us on Twitter
         </a>
       </div>
