"more" now just a link.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -128,10 +128,11 @@ a {
 
 .load-next {
   position: relative;
-  bottom: -30px;
-  border-bottom: 0;
-  .border-bottom-radius(0);
-  line-height: 23px;
+  display: block;
+  font-size: 30px;
+  font-weight: 300;
+  text-align: right;
+  color: @gray;
 
   img {
     vertical-align: bottom;
