--- a/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/who_to_follow.html.twig
@@ -31,7 +31,7 @@
     {% endfor %}
     {% if source == 'adstacy' and  users|length >= max_who_to_follow %}
       {% set params = app.request.query.all|merge({page: (app.request.query.get('page') ?: 1) + 1}) %}
-      <a href="{{ path('adstacy_app_who_to_follow', params) }}" class="btn btn-default btn-lg btn-block load-next next-page">{{ "more"|trans }}</a>
+      <a href="{{ path('adstacy_app_who_to_follow', params) }}" class="load-next next-page">{{ "more"|trans }}</a>
     {% endif %}
   {% else %}
     <p class="big-center-text">{{"no_who_to_follow"|trans}}</p>
