--- a/src/Adstacy/AppBundle/Resources/views/App/tags.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/tags.html.twig
@@ -27,7 +27,7 @@
   {% endfor %}
   {% if tags|length >= max_tags_per_page %}
     {% set params = app.request.query.all|merge({page: (app.request.query.get('page') ?: 1) + 1}) %}
-    <a href="{{ path('adstacy_app_tags', params) }}" class="btn btn-default btn-lg btn-block load-next next-page">{{ "more"|trans }}</a>
+    <a href="{{ path('adstacy_app_tags', params) }}" class="load-next next-page">{{ "more"|trans }}</a>
   {% endif %}
 {% endblock %}
 
