--- a/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
@@ -44,7 +44,7 @@
   {% endfor %}
   {% if paginator.hasNextPage %}
     {% set params = app.request.query.all|merge({username: user.username, page: paginator.getNextPage}) %}
-    <a href="{{ path(route, params )}}" class="btn btn-default btn-lg btn-block load-next next-page">More</a>
+    <a href="{{ path(route, params )}}" class="load-next next-page">{{ "more"|trans }}</a>
   {% endif %}
 {% endblock %}
 
