fix loader on tags list.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/tags.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/tags.less
@@ -8,7 +8,7 @@
     border:1px solid #d5d5d5;
     border-bottom-color:#ddd;
     background: #eee;
-    float: left;
+    display: inline-block;
     margin: 5px;
     background:#ddd;
     background:-webkit-gradient(linear,left top,left bottom,color-stop(.25, #eee),color-stop(1, #ddd));
