Remove sidebar from pages show.

--- a/src/Adstacy/AppBundle/Resources/views/Page/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Page/show.html.twig
@@ -9,6 +9,8 @@
   {% endstylesheets %}
 {% endblock %}
 
+{% block sidebar %}{% endblock %}
+
 {% block content %}
   <div id="page" class="panel panel-default">
     <div class="panel-heading">
@@ -19,3 +21,4 @@
     </div>
   </div>
 {% endblock %}
+
