--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
@@ -95,17 +95,11 @@
 
   a {
     font-size: 12px;
+    color: @gray-light;
   }
 
-  .username {
-    color: #666;
-    font-size: 13px;
-    font-weight: bold;
+  .name {
     display: block;
-    margin-bottom: 3px;
-    &:hover {
-      color: #333;
-    }
   }
 }
 
