realname on site menu now can wrap.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -114,7 +114,9 @@
                     <img src="{{ profile_pic(app.user) }}" alt="{{ app.user.username }}" width="32" height="32" class="media-object">
                   </a>
                   <div class="media-body">
-                    <a class="name" href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}" title="{{ "profile"|trans }}"><span class="realname">{{ app.user.realname }}</span></a>
+                    <a class="name" href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}" title="{{ "profile"|trans }}">
+                      <span class="realname">{{ app.user.realname }}</span>
+                    </a>
                     <a href="{{ path('fos_user_security_logout') }}" title="{{ "logout"|trans }}">{{ "logout"|trans }}</a>
                   </div>
                 </div>
