--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
@@ -85,8 +85,10 @@
 
 #site-user-menu {
   padding: 20px 20px 10px 20px;
-  white-space: nowrap;
-  line-height: 1;
+
+  .name {
+    line-height: 1.2;
+  }
 
   .media-object {
     width: 32px;
