Fix broadcast this.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -141,7 +141,7 @@
         {% if promoteesCount > cntLastPromotees %}
           {{"ads.other_promotes"|trans({'%count%': promoteesCount - cntLastPromotees })|raw}}
         {% endif %}
-        broadcast this
+        {{"ads.broadcast_this"|trans}}
         </span>
       </div>
     {% endif %}
