Fix login alert.

--- a/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
@@ -15,7 +15,7 @@
   <div class="form-group">
     {{ form_label(form, null, { label_attr: { class: 'hide' } }) }}
     {{ form_widget(form, { attr: { class: 'form-control input-lg' } }) }}
-    {{ form_errors(form, { attr: { class: 'alert alert-danger' } }) }}
+    {{ form_errors(form, { attr: { class: 'alert alert-error' } }) }}
   </div>
 {% endblock %}
 
