--- a/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
@@ -22,7 +22,7 @@
     {% if errors|length > 0 %}
       {% for error in errors %}
       <div class="alert alert-error alert-dismissable">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{ error.message }}
       </div>
       {% endfor %}
