--- a/app/Resources/views/base_single_column.html.twig
+++ b/app/Resources/views/base_single_column.html.twig
@@ -1,10 +1,11 @@
 {% extends '::base.html.twig' %}
 
-{% block container %}
+{% block single %}single{% endblock %}
+
+{% block inner_container %}
   <div class="adstacy-single-col">
     {% block content %}{% endblock %}
   </div>
 {% endblock %}
 
-{% block sidebar %}{% endblock %}
 {% block youtube_javascript %}{% endblock %}
