--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -43,26 +43,17 @@ a {
 }
 
 .adstacy-single-col {
-  min-width: 320px;
-  max-width: 1024px;
-  padding: 30px 15px;
+  padding: 30px 10px;
   margin: 0 auto;
   .transition(margin-left .5s);
 
   .column {
-    max-width: 500px;
+    min-width: 300px;
+    max-width: 600px;
     margin: 0 auto;
 
-    .panel:first-child {
+    .panel:last-child {
       margin-bottom: 0;
-    }
-  }
-
-  @media screen and (max-width: 480px) {
-    width: 100%;
-
-    .column {
-      width: 100%;
     }
   }
 }
